[gd_scene load_steps=13 format=3 uid="uid://b72jsdjvuvb50"]

[ext_resource type="Script" path="res://main_menu.gd" id="1_2t2tw"]
[ext_resource type="Texture2D" uid="uid://d06bcn0dsqm8b" path="res://Screenshot 2025-04-11 160453.png" id="1_6vtvb"]
[ext_resource type="FontFile" uid="uid://yqosytww4uur" path="res://GrapeSoda.ttf" id="2_ak2tr"]
[ext_resource type="Script" path="res://options_menu.gd" id="4_c6ifl"]
[ext_resource type="Texture2D" uid="uid://e4yt8g1hv5fu" path="res://atestat chestie.png" id="4_f3e45"]
[ext_resource type="Script" path="res://color_rect.gd" id="5_1pm6y"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_yht7s"]
texture = ExtResource("1_6vtvb")
modulate_color = Color(0.284118, 0.264659, 0.269635, 1)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_jfkcp"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_17k53"]
bg_color = Color(0.641934, 0.641934, 0.641934, 1)
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20
shadow_color = Color(0.18359, 0.18359, 0.18359, 0.6)
shadow_size = 5
shadow_offset = Vector2(0, 3.5)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_bujf5"]
bg_color = Color(0.446777, 0.446777, 0.446777, 1)
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20
shadow_color = Color(0.18359, 0.18359, 0.18359, 0.6)
shadow_size = 5
shadow_offset = Vector2(0, 3.5)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_tl3oa"]
bg_color = Color(1, 1, 1, 1)
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20
shadow_color = Color(0.18359, 0.18359, 0.18359, 0.6)
shadow_size = 5
shadow_offset = Vector2(0, 3.5)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_fh57y"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 218.0
offset_top = 230.0
offset_right = -520.0
offset_bottom = -268.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_2t2tw")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = -0.527
anchor_top = -1.527
anchor_right = 2.271
anchor_bottom = 2.793
offset_left = 0.178009
offset_top = 0.0500031
offset_right = -0.194031
offset_bottom = 0.0499573
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_yht7s")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -229.0
offset_top = 60.0
offset_right = 139.0
offset_bottom = 276.0
grow_horizontal = 0
grow_vertical = 2
theme_override_constants/separation = 10

[node name="Button" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 30
theme_override_styles/focus = SubResource("StyleBoxEmpty_jfkcp")
theme_override_styles/hover = SubResource("StyleBoxFlat_17k53")
theme_override_styles/pressed = SubResource("StyleBoxFlat_bujf5")
theme_override_styles/normal = SubResource("StyleBoxFlat_tl3oa")
text = "Începe jocul"

[node name="Button2" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 30
theme_override_styles/focus = SubResource("StyleBoxEmpty_fh57y")
theme_override_styles/hover = SubResource("StyleBoxFlat_17k53")
theme_override_styles/pressed = SubResource("StyleBoxFlat_bujf5")
theme_override_styles/normal = SubResource("StyleBoxFlat_tl3oa")
text = "Informații"

[node name="Button3" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 30
theme_override_styles/focus = SubResource("StyleBoxEmpty_jfkcp")
theme_override_styles/hover = SubResource("StyleBoxFlat_17k53")
theme_override_styles/pressed = SubResource("StyleBoxFlat_bujf5")
theme_override_styles/normal = SubResource("StyleBoxFlat_tl3oa")
text = "Ieșire
"

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -199.0
offset_top = -115.0
offset_right = 556.0
offset_bottom = -46.0
grow_horizontal = 2
theme_override_colors/font_shadow_color = Color(0.0807833, 0.0807833, 0.0807833, 1)
theme_override_constants/shadow_offset_x = 5
theme_override_fonts/font = ExtResource("2_ak2tr")
theme_override_font_sizes/font_size = 80
text = "Cavalerul și monedele pierdute"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label2" type="Label" parent="."]
layout_mode = 0
offset_left = -66.0
offset_top = -9.0
offset_right = 857.0
offset_bottom = 78.0
theme_override_font_sizes/font_size = 30
text = "Ajută cavalerul curajos să adune toate cele 10 monede pierdute
        ferindu-te de inamici și tinându-te departe de pericole
"

[node name="OptionsMenu" type="Control" parent="."]
visible = false
layout_mode = 1
anchor_left = -0.527
anchor_top = -1.553
anchor_right = 2.283
anchor_bottom = 2.767
offset_left = 0.178009
offset_top = -0.0499878
offset_right = -0.161987
offset_bottom = -0.0500183
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("4_c6ifl")

[node name="ColorRect" type="TextureRect" parent="OptionsMenu"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -75.0
offset_top = -230.0
offset_right = -75.0
offset_bottom = -230.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1.5, 1.5)
texture = ExtResource("4_f3e45")
stretch_mode = 6
script = ExtResource("5_1pm6y")

[connection signal="pressed" from="VBoxContainer/Button" to="." method="_on_start_pressed"]
[connection signal="pressed" from="VBoxContainer/Button2" to="." method="_on_button_2_pressed"]
[connection signal="pressed" from="VBoxContainer/Button3" to="." method="_on_exit_pressed"]
